# trillek-client-core

./: .gitmodules  CMakeLists.txt  README.md  create_module.sh
include/: ecs-state-system.hpp  trillek-game.hpp
include/graphics/: animation-system.hpp  camera.hpp  light.hpp  material.hpp  render-layer.hpp  renderable.hpp  shader.hpp  six-dof-camera.hpp  texture.hpp  vertex-list.hpp
include/resources/: text-file.hpp
include/systems/: async-data.hpp  graphics.hpp  gui.hpp  lua-system.hpp  physics.hpp  sound-system.hpp  transform-system.hpp  transform-update-system.hpp
include/util/: json-parser.hpp
main/: Standalone_main.cpp  client-main.cpp
modules/core/: CMakeLists.txt
modules/core/include/: fake.h
modules/core/include/components/: IVCDevice.h  VCMotherboard.h
modules/core/include/controllers/: VirtualKeyboard.h
modules/core/include/systems/: VC.h
modules/core/main/: main.cpp
modules/core/src/: fake.cpp
modules/core/src/controllers/: VirtualKeyboard.cpp
modules/core/src/systems/: VC.cpp
modules/core/tests/: test.cpp
src/: ecs-state-system.cpp  os.cpp  transform.cpp  trillek-game.cpp
src/graphics/: animation-system.cpp  light.cpp  material.cpp  render-layer.cpp  renderable.cpp  six-dof-camera.cpp  texture.cpp  vertex-list.cpp
src/lua/: lua_gui.cpp  lua_os.cpp  lua_physics.cpp  lua_transform.cpp
src/physics/: collidable.cpp
src/systems/: graphics.cpp  gui.cpp  lua-registration.cpp  lua-system.cpp  meta-engine-system.cpp  physics.cpp  registration.cpp  sound-system.cpp  transform-update-system.cpp
src/util/: json-parser.cpp
tests/tests/: transform-system-test.h
